# config/routes/productsRoutes.js
@@ -3,9 +3,15 @@ import express from "express";
 import {
   getStockProductsController,
   insertarPedidosRepSolController,
-  getOCdefinitivaController
+  getOCdefinitivaController,
+  getProductbyIdController,
+  getInfoTRController,
+  getVolumetriaWmsController,
+  getAllRecetasController,
+  getImagenesProductosController
 } from "../../src/api/v1/controllers/ProductsController.js";
 import getAllProductsAplications1 from "../../src/api/v1/controllers/productscontroller1.js";
+import { insertarPedidosDisamController } from "../../src/api/v1/controllers/PedidosDisamController.js";
 
 import { existCla } from "../../src/api/v1/middlewares/valida_clasificacion.js";
 
@@ -16,14 +22,22 @@ const router = express.Router();
 
 router.post("/products",existCla ,getAllProductsAplications1);
 
- 
+
 router.post("/pedidos", insertarPedidosRepSolController);
+
+router.post("/ordenes-disam", insertarPedidosDisamController);
 
 
 router.get("/stock/:empresa/:codigo/:cantidad",  getStockProductsController);
 
 
 router.post("/ocdefinitiva", getOCdefinitivaController);
+
+router.get("/buscar-prod/:id", getProductbyIdController);
+router.get("/cod-publicacion/:id", getInfoTRController);
+router.get("/dimensiones/:producto", getVolumetriaWmsController);
+router.get("/recetas", getAllRecetasController);
+router.get("/imagenes-productos", getImagenesProductosController);
 
 
 export default router;
